Changelog
=========

2.1.12 (unreleased)
-------------------

- Nothing changed yet.


2.1.11 (2014-01-27)
-------------------

- Nothing changed yet.


2.1.10 (2013-03-05)
-------------------

- Fixed error on checking in the working copy of an object linked in it's
  parent rich text field, see: https://dev.plone.org/ticket/13462
  [radekj]


2.1.9 (2013-01-13)
------------------

- Nothing changed yet.


2.1.8 (2012-10-03)
------------------

- Unmark both the baseline and the working copy on checkin so that dexterity
  content is properly unmarked.
  [cewing]


2.1.7 (2012-08-04)
------------------

- Allow browser view templates to be defined and thus overridden in ZCML.
  [rpatterson]


2.1.6 (2012-06-29)
------------------

- Import events from zope.lifecycleevent.
  [hannosch]

- Fix permissions check in parent folder working copy locator.
  [mitchellrj]


2.1.5 (2012-03-16)
------------------

- Don't declare IIterateAware as an extension of Archetypes' IReferenceable,
  because there are other implementations (such as the one for Dexterity)
  that don't use Archetypes references.
  [davisagli]

- Make sure permissions of working copy workflow get applied when checking 
  out content, fixes http://dev.plone.org/ticket/12780
  [anthonygerrard]


2.1.4 (2011-11-24)
------------------

- Preserve content contents UIDs when checking a folder back in.  This
  prevents breaking linking by UID in the editor.
  [rossp]

- Fix a problem with items added to a checked out folder not being
  visible after checkin.  Fixes #12257.
  [rossp]

- Preserve the folder order position from the item originally checked
  out when checking it back in.
  [rossp]

- Allow user of check'd out content to also see the checkout info so
  a contributor can see that he already has a page checked out
  easily.
  [vangheem]


2.1.3 (2011-08-31)
------------------

- Remove rogue div tag from diff.pt. This fixes
  http://dev.plone.org/plone/ticket/11249
  [danjacka]

2.1.2 - 2011-06-02